--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
 file.reference.jstl-1.2.jar=lib\\jstl-1.2.jar
+file.reference.xmlpull-1.1.3.1.jar=lib\\xmlpull-1.1.3.1.jar
+file.reference.xstream-1.4.10.jar=lib\\xstream-1.4.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +41,10 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jstl-1.2.jar}
+    ${file.reference.jstl-1.2.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.xmlpull-1.1.3.1.jar}:\
+    ${file.reference.xstream-1.4.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
